# RotRate

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA.ipynb  GetStarted.ipynb  ModelBuilding.ipynb
scripts/: cleaning.py
